condb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: condb-service
  namespace: pedemo-ylq3-user1
spec:
  selector:
    app: condb
  ports:
    - port: 8888
      targetPort: 8888
