webby-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webby-service
  namespace: pedemo-ylq3-user1
spec:
  type: ClusterIP
  selector:
    app: webby
  ports:
    - port: 80
      targetPort: 9999
