webby-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webby
  namespace: pedemo-ylq3-user1
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: webby-service
    weight: 100
  wildcardPolicy: None
